Bug 483564. Adjust caret location so that GTK themes draw RTL carets correctly. r+sr=roc